--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "mahu-front"]
 	path = mahu-front
-	url = https://github.com/Naegato/mahu-front
+	url = git@github.com:Naegato/mahu-front.git
 [submodule "mahu-strapi"]
 	path = mahu-strapi
-	url = https://github.com/Naegato/mahu-strapi
+	url = git@github.com:Naegato/mahu-strapi.git
